--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "socket.io": "^4.7.4",
-    "pg": "^8.11.5"
+    "pg": "^8.11.5",
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.5",
+    "@types/pg": "^8.16.0",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.12"
