--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "@types/pg": "^8.16.0",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.12"
+    "vite": "4.5.0"
   }
 }
