--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "build": "tsc && vite build",
     "start": "node dist/server/index.js",
     "build:client": "vite build",
+    "build:reown": "vite build --config vite.reown.config.ts",
     "migrate": "tsx scripts/migrate.ts",
     "backup:db": "tsx scripts/backup-db.ts",
     "normalize-winner-names": "tsx scripts/normalize-winner-names.ts",
     "house-bots": "node scripts/run-house-bots.js"
   },
   "dependencies": {
+    "@reown/appkit": "^1.8.17",
+    "@reown/appkit-adapter-ethers": "^1.8.17",
     "cors": "^2.8.5",
+    "ethers": "^6.16.0",
     "express": "^4.18.2",
     "pg": "^8.11.5",
     "skia-canvas": "^3.0.8",
