--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/server/index.ts",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && npm run build:claw-shooter",
+    "build:claw-shooter": "vite build --config vite.claw-shooter.config.ts",
     "start": "node dist/server/index.js",
     "build:client": "vite build",
     "build:reown": "vite build --config vite.reown.config.ts",
@@ -26,7 +27,16 @@
     "express": "^4.18.2",
     "pg": "^8.11.5",
     "skia-canvas": "^3.0.8",
-    "socket.io": "^4.7.4"
+    "socket.io": "^4.7.4",
+    "@react-three/drei": "^9.103.0",
+    "@react-three/fiber": "8.13.3",
+    "@react-three/postprocessing": "^2.16.2",
+    "@react-three/rapier": "^1.3.0",
+    "playroomkit": "^0.0.71",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "three": "0.160.0",
+    "three-stdlib": "^2.29.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -36,6 +46,13 @@
     "dotenv": "^17.2.4",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
-    "vite": "4.5.0"
+    "vite": "4.5.0",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@types/three": "0.160.0",
+    "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
