--- a/package.json
+++ b/package.json
@@ -20,21 +20,24 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.990.0",
+    "@dimforge/rapier3d-compat": "^0.19.3",
+    "@gltf-transform/core": "^4.3.0",
+    "@react-three/drei": "^9.103.0",
+    "@react-three/fiber": "8.13.3",
+    "@react-three/postprocessing": "^2.16.2",
+    "@react-three/rapier": "^1.3.0",
     "@reown/appkit": "^1.8.17",
     "@reown/appkit-adapter-ethers": "^1.8.17",
     "cors": "^2.8.5",
     "ethers": "^6.16.0",
     "express": "^4.18.2",
     "pg": "^8.11.5",
-    "skia-canvas": "^3.0.8",
-    "socket.io": "^4.7.4",
-    "@react-three/drei": "^9.103.0",
-    "@react-three/fiber": "8.13.3",
-    "@react-three/postprocessing": "^2.16.2",
-    "@react-three/rapier": "^1.3.0",
     "playroomkit": "^0.0.71",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "skia-canvas": "^3.0.8",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.8.3",
     "three": "0.160.0",
     "three-stdlib": "^2.29.6"
   },
@@ -43,16 +46,16 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.5",
     "@types/pg": "^8.16.0",
-    "dotenv": "^17.2.4",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.3",
-    "vite": "4.5.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/three": "0.160.0",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.19",
+    "dotenv": "^17.2.4",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3",
+    "vite": "4.5.0"
   }
 }
